# yobadownloader

./: README.md  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/ffmpeg-cli/: Cargo.toml
src-tauri/ffmpeg-cli/src/: lib.rs  runner.rs
src-tauri/icons/: icon.icns
src-tauri/rytube/: Cargo.toml
src-tauri/rytube/src/: client_builder.rs  lib.rs  parser.rs
src-tauri/rytube/src/decryption/: mod.rs  singature_decryption.rs
src-tauri/rytube/src/deserializers/: mime_type.rs  mod.rs  signature_cipher.rs
src-tauri/rytube/src/structs/: error.rs  innertube.rs  mod.rs  raw_stream.rs  stream.rs  stream_elements.rs  thumbnail.rs  video.rs
src-tauri/src/: commands.rs  downloader.rs  ffmpeg_utils.rs  main.rs  structs.rs
ui/: index.html  options.html  progress.html
ui/css/: general.css  index.css  options.css  page_transition.css  progress.css
ui/js/: general.js  index.js  options.js  progress.js  swupInit.js
