[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.5", features = ["dialog-save", "window-close", "window-maximize", "window-minimize", "window-request-user-attention", "window-start-dragging", "window-unmaximize"] }
regex = "1.6.0"
lazy_static = "1.4.0"
reqwest = "0.11.11"
futures = "0.3.21"
directories = "4.0.1"
ffmpeg-cli = { path = "ffmpeg-cli"}
rytube = { path = "rytube"}
flate2 = "1.0.24"
tokio = { version = "1", features = ["fs"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true #

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
