[package]
name = "rytube"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
reqwest = { version = "0.11.11", features = ["json", "stream", "cookies"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_with = { version = "2.0.0", features = ["json"] }
url = "2.2.2"
serde_qs = "0.10.1"
serde_json = "1.0.85"
mime = "0.3.16"
regex = "1.6.0"
lazy_static = "1.4.0"
tokio = { version = "1", features = ["fs"] }